--- a/index.css
+++ b/index.css
@@ -1,5 +1,60 @@
-h1{
-    color: aquamarine;
-    align-items: center;
-    background-color: rgb(0, 255, 128);
+body{
+     background-color:#FDF0DC;
+}
+ 
+p{
+    text-align: center;
+    font-family: "Jockeey One";
+    color: #A1A249;
+    font-size: 55px;
+}
+
+
+  
+  
+.container {
+    display: flex;
+    justify-content: center; /* Centraliza horizontalmente */
+    gap: 20px; /* Adiciona espaço entre as imagens */
+    width: 80%;
+}
+
+.image-box {
+    text-align: center;
+}
+
+.image-box img {
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
+/* Estilos específicos para cada imagem */
+.img-1 {
+    width: 150px; /* Tamanho específico para a imagem 1 */
+}
+
+.img-2 {
+    width: 200px; /* Tamanho específico para a imagem 2 */
+}
+
+.img-3 {
+    width: 250px; /* Tamanho específico para a imagem 3 */
+}
+
+/* Estilos específicos para o texto abaixo de cada imagem */
+.text-1 {
+    color: red; /* Cor específica para o texto da imagem 1 */
+}
+
+.text-2 {
+    color: green; /* Cor específica para o texto da imagem 2 */
+}
+
+.text-3 {
+    color: blue; /* Cor específica para o texto da imagem 3 */
+}
+
+.image-box p {
+    margin-top: 10px;
+    font-size: 16px;
 }
