--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body{
      background-color:#FDF0DC;
-}
+      }
  
 p{
     text-align: center;
@@ -14,10 +14,10 @@ p{
   
 .container {
     display: flex;
-    justify-content: center; /* Centraliza horizontalmente */
-    gap: 20px; /* Adiciona espaço entre as imagens */
-    width: 80%;
-}
+    justify-content: center; 
+    align-items: center; 
+    gap: 70px; 
+  }
 
 .image-box {
     text-align: center;
@@ -28,33 +28,89 @@ p{
     border-bottom-right-radius: 15px;
 }
 
-/* Estilos específicos para cada imagem */
+
 .img-1 {
-    width: 150px; /* Tamanho específico para a imagem 1 */
+    width: 250px; 
 }
 
 .img-2 {
-    width: 200px; /* Tamanho específico para a imagem 2 */
+    width: 240px; 
 }
 
 .img-3 {
-    width: 250px; /* Tamanho específico para a imagem 3 */
+    width: 250px; 
+    height: 360px;
 }
 
 /* Estilos específicos para o texto abaixo de cada imagem */
 .text-1 {
-    color: red; /* Cor específica para o texto da imagem 1 */
+    color: white;
+    background-color: #A67516;
+    border-radius: 20px;
+    padding-bottom: 5px;
+    text-align: center;
+    
+
+    
 }
 
 .text-2 {
-    color: green; /* Cor específica para o texto da imagem 2 */
+    color: white;
+    background-color: #A67516;
+    border-radius: 20px;
+    padding-bottom: 5px;
+    text-align: center;
 }
 
 .text-3 {
-    color: blue; /* Cor específica para o texto da imagem 3 */
+    color: white;
+    background-color: #A67516;
+    border-radius: 20px;
+    padding-bottom: 5px;
+    text-align: center;
 }
 
 .image-box p {
     margin-top: 10px;
     font-size: 16px;
 }
+
+.content {
+    text-align: center;
+}
+
+.center-line {
+    width: 50%; /* Ajuste a largura da linha conforme necessário */
+    margin: 20px auto; /* Centraliza a linha horizontalmente e adiciona margem vertical */
+    border: none;
+    border-top: 2px solid #75760E; /* Define a cor e a espessura da linha */
+       }
+
+
+       .map-container {
+        text-align: center;
+    }
+    
+    .map-image {
+        width: 500px; /* Ajuste o tamanho conforme necessário */
+        height: 300;
+        
+        border-radius: 10px; /* Adiciona cantos arredondados à imagem */
+        cursor: pointer; /* Muda o cursor para indicar que é clicável */
+    }
+
+    .content-container {
+        display: flex;
+        justify-content: center;
+        align-items: left;
+        gap: 60px; /* Espaço entre o texto e o mapa */
+        padding: 10px;
+        border-radius: 10px;
+        
+    }
+    
+    .text-container {
+        max-width: 450px; /* Largura máxima do texto */
+        text-align: left; /* Alinhamento do texto */
+        font-size: 55px;
+    }
